--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ whitelist_externals = find
 commands =
     find . -name "*.pyc" -delete
     py.test --basetemp {envtmpdir} {toxinidir}/test_humanhash.py
-    # py.test --basetemp {envtmpdir} --doctest-modules {toxinidir}/humanhash.py
+    py.test --basetemp {envtmpdir} --doctest-modules {toxinidir}/humanhash.py {toxinidir}/README.rst
 deps =
     pytest
     pytest-sugar
